internal class AnimStrings
{
    internal static string playerWalk = "Player_Walk";
    internal static string playerIdle = "Player_Idle";
    internal static string playerJump = "Player_Jump";
    internal static string playerInAir = "Player_InAir";
    internal static string playerLand = "Player_Land";
}